remove frozen lock

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,5 @@
   "devCommand": "pnpm dev",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "pnpm install"
+  "installCommand": "pnpm install --no-frozen-lockfile"
 }
