--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
     "next": "15.3.0-canary.13",
+    "posthog-js": "^1.236.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sonner": "^2.0.1",
