--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@builder.io/sdk": "^6.0.9",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-dialog": "^1.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
